<resources>
    <string name="app_name">Music Intonation</string>
    <string name="action_settings">Settings</string>
    <string name="level">level:</string>
    <string name="_0">0</string>
    <string name="note">note:</string>
    <string name="a5">A5</string>
    <string name="hp">HP:</string>
    <string name="confirm">Confirm</string>
    <string name="the_first_note_button">The first note button</string>
    <string name="restart">RESTART</string>
    <string name="start">START</string>
    <string name="start_notation">Music Intonation</string>
    <string name="end_notation">Your final score is: </string>
    <string name="scoreboard">ScoreBoard!</string>
    <string name="score_board">Score Board</string>
    <string name="post_to_score_board">Post to score board!</string>
    <string name="off">No</string>
    <string name="on">Yes</string>
    <string name="your_nickname">Your nickname</string>
    <string name="the_third_note_button">The third note button</string>
    <string name="the_second_note_button">The second note button</string>
    <string name="which_one_of_the_following_is">Which one of the following is</string>
</resources>
