<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/north"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_notation"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/south"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/scoreboard_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/score_board"
            android:visibility="visible" />

        <Button
            android:id="@+id/restart_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/restart"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/south"
        android:layout_below="@id/north"
        android:gravity="center">

        <Button
            android:id="@+id/post_to_board_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/post_to_score_board"
            android:visibility="visible" />

        <EditText
            android:id="@+id/nickname_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/your_nickname"
            android:hint="@string/your_nickname"
            android:inputType="text" />


    </LinearLayout>

</RelativeLayout>

